apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-parcelize'
apply plugin: 'maven-publish'

tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ]
}

repositories {
    maven {
        url 'https://dl.bintray.com/xojan/maven/'
    }
    maven { url 'https://artifacts.netcore.co.in/artifactory/android' }
    mavenCentral()
    google()
    maven { url 'https://dl.bintray.com/xojan/maven/' }
    maven { url "https://repo.grails.org/grails/core/" }
    maven { url 'https://mvnrepository.com' }
    maven { url 'https://repo1.maven.org/maven2/' }
    mavenLocal()
}



android {

    defaultConfig {
        minSdkVersion 24
        compileSdkVersion 36
        targetSdkVersion 36
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
        versionCode 1
        versionName "1.0.0" // 2.1.9 (162)
        vectorDrawables {
            useSupportLibrary true
        }

        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
        renderscriptTargetApi 18
        renderscriptSupportModeEnabled true
        multiDexEnabled true
        manifestPlaceholders = [appLabel: "@string/app_name"]
    }

    publishing {
        singleVariant('release') {
            withSourcesJar()
            withJavadocJar()
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    kotlinOptions {
        jvmTarget = "11"
    }
    namespace 'com.hlb.kyc.app'
}


dependencies {

    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
    implementation 'com.google.android.material:material:1.1.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.viewpager2:viewpager2:1.0.0'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
//    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.3'

    //cardview
    implementation 'androidx.cardview:cardview:1.0.0'

    //tac edittext
    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'

    //retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
    implementation "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
    implementation 'com.kaopiz:kprogresshud:1.1.0'
    annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.ext.butterknifeVersion}"

    // RecyclerView
    implementation 'androidx.recyclerview:recyclerview:1.0.0'

    //Ted permission
//    implementation "gun0912.ted:tedpermission:$rootProject.ext.tedPermissionVersion"
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.intuit.sdp:sdp-android:1.0.6'
    implementation 'com.fivehundredpx:blurringview:1.0.0'
    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
    implementation 'me.relex:circleindicator:2.1.6'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlin_version"
    implementation ("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.ext.kotlin_version") {
        exclude group: 'commons-codec', module: 'commons-codec'
        exclude group: 'org.apache.commons', module: 'commons-collections4'
    }
    implementation 'com.wang.avi:library:2.1.3'
    implementation 'me.everything:overscroll-decor-android:1.0.4'
    implementation "com.github.ksoichiro:android-observablescrollview:${SYNCED_VERSION_NAME}"
    implementation "org.greenrobot:eventbus:$rootProject.ext.eventBusVersion"
    // parallax recycler view
//    implementation 'com.dinuscxj:pullzoomrecyclerview:1.0.4'
    implementation 'com.github.ybq:Android-SpinKit:1.2.0'

    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxAndroidVersion"
    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
    implementation "com.fasterxml.jackson.core:jackson-core:$rootProject.ext.jaksonVersion"
    implementation "com.fasterxml.jackson.core:jackson-annotations:$rootProject.ext.jaksonVersion"
    implementation "com.fasterxml.jackson.core:jackson-databind:$rootProject.ext.jaksonVersion"
    implementation 'com.github.osamaaftab:TSnackBar:-SNAPSHOT'
    implementation 'com.google.dagger:dagger:2.21'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.21'
    implementation 'com.google.dagger:dagger-android-support:2.21'

    // if you use the support libraries
    testAnnotationProcessor "com.google.dagger:dagger-compiler:2.21"
    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:2.21"
    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxAndroidVersion"
    implementation 'org.aspectj:aspectjtools:1.6.2'
    implementation 'com.github.bumptech.glide:glide:4.10.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
    implementation("com.github.bumptech.glide:okhttp3-integration:4.2.0") {
        exclude group: 'glide-parent'
    }

    implementation 'id.zelory:compressor:2.1.1'
    implementation 'com.intuit.ssp:ssp-android:1.0.6'
    implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'

    //Fotoapparat
    implementation 'io.fotoapparat:fotoapparat:2.6.1'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'


    def camera_version = "1.2.2"//keep this version
    implementation "androidx.camera:camera-core:$camera_version"
    implementation "androidx.camera:camera-camera2:$camera_version"
    implementation "androidx.camera:camera-lifecycle:$camera_version"
    implementation "androidx.camera:camera-view:$camera_version"
    implementation "org.jetbrains.kotlin:kotlin-reflect:$rootProject.ext.kotlin_version"
    implementation "com.getkeepsafe.relinker:relinker:1.4.4"
    implementation 'androidx.work:work-runtime-ktx:2.7.1' // to avoid crash on Android 12 implementation 31
    implementation 'com.otaliastudios:cameraview:2.7.2' // if trueid sdk can update with updated camerax library we can use camerax for qr scanner
    implementation "androidx.security:security-crypto:1.0.0"
    //facebook events
    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
    implementation 'com.facebook.android:facebook-core:5.15.3'
    implementation 'com.facebook.android:facebook-marketing:4.42.0'

    // Face features
    implementation 'com.google.mlkit:face-detection:16.1.7'
    //NFC
    implementation 'com.google.mlkit:text-recognition:16.0.1'
    implementation("org.jmrtd:jmrtd:0.7.25") {
        exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
    }
    implementation 'com.github.mhshams:jnbis:1.1.0'
    implementation 'com.github.amcs99:card-reader-lite:1.0.1'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.27'

    implementation 'com.github.devsideal:VectorChildFinder:1.0.0'
    implementation "org.apache.commons:commons-io:+"
    implementation "com.jakewharton.timber:timber:5.0.1"
    implementation "androidx.fragment:fragment-ktx:1.7.1"
    implementation "androidx.activity:activity-ktx:1.9.0"
    implementation 'de.hdodenhof:circleimageview:3.0.1'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    implementation 'androidx.core:core-ktx:1.13.1'
    implementation 'androidx.annotation:annotation:1.9.1'
    implementation 'com.github.joshjdevl.libsodiumjni:libsodium-jni-aar:2.0.1'
    implementation "com.github.tanoDxyz:GDownload:1.1"
    implementation 'androidx.work:work-runtime:2.10.2'
    implementation 'androidx.work:work-runtime-ktx:2.10.2'

    // Nudge
    implementation ("com.netcore.android:smartech-sdk:3.4.2"){
        exclude group: 'commons-codec', module: 'commons-codec'
        exclude group: 'org.apache.commons', module: 'commons-collections4'
    }
    implementation ("com.netcore.android:smartech-nudges:10.1.1") {
        exclude group: 'commons-codec', module: 'commons-codec'
        exclude group: 'org.apache.commons', module: 'commons-collections4'
    }
    implementation "com.github.tanoDxyz:GDownload:1.1"
    implementation 'androidx.work:work-runtime:2.10.2'
    implementation 'androidx.work:work-runtime-ktx:2.10.2'

}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                // The rest of your POM configuration is not strictly needed for JitPack
                // but is good practice for Maven Central.
            }
        }
    }

}




